--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -13,7 +13,7 @@ env:
 jobs:
   terraform_apply:
     name: Terraform Apply
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     defaults:
       run:
         shell: bash  
